# traveller

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/traveller/: __init__.py  cli.py  dice.py
tests/: test_dice.py
web/api/: app.py
web/frontend/: package-lock.json  package.json
web/frontend/src/app/: globals.css  layout.tsx  page.tsx
